# editorconfig-updater

./: Cargo.toml  README.md
src/: main.rs
