[package]
name = "editorconfig-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
json = "0.12.4"
quick-xml = "0.27.1"
hyper = { version = "0.14.23", default-features = false, features = ["client"] }
hyper-rustls = { version = "0.23.2", features = ["http2"] }
tokio = { version = "1.23.0", features = ["full"] }
rustls = { version = "0.20.7", default-features = false, features = ["tls12"] }
bytes = "1.3.0"
regex = "1.7.0"
